# hawkx

./: .gitignore  LICENSE  README.md  cli.py  package-lock.json  prompt.txt  pyproject.toml  requirements.txt
hawkx/: __main__.py  settings.py
llms_prompt/: server.py
twitter/agent/: agent.py  proxy.py  server.py
twitter/package/: __init__.py  llms.txt
twitter/package/functions/: __init__.py  bookmarks.py  post.py  user_tweets.py
twitter/package/utils/: __init__.py  client.py  constants.py  creds.py  types.py
twitter/workspace/: logank_posts.py  willccbb_posts.py
